# dnd-switch

./: Cargo.toml  Dockerfile  Dockerfile.arm  README.md
.github/workflows/: ci.yml
be/: Cargo.toml
be/src/: error.rs  main.rs  models.rs  u_client.rs
docker/: Dockerfile  Dockerfile.arm
fe/: Cargo.toml  README.md
fe/src/: lib.rs  models.rs
fe/static/: index.html  styles.css
fe/static/fav/: site.webmanifest
