[package]
name = "dnd-switcher"
version = "0.1.0"
authors = ["Aleksandr Bochev <red.avtovo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"

log = "0.4.8"
wasm-logger = "0.2.0"

yewprint = { git = "https://github.com/cecton/yewprint.git", branch = "main" }
# right now you need a specific version of Yew to use Yewprint
yew = { git = "https://github.com/yewstack/yew.git", rev = "db3170f629f" }

futures = "0.3.13"
serde = { version = "1.0.125", features = ["derive"] }
reqwest = { version = "0.11.2", features = ["json"] }

stdweb = "0.4.20"